<resources>
    <string name="app_name">CalculadoraLuz</string>
    <string name="percentage">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace">Del</string>
    <string name="fraction">1/x</string>
    <string name="power">x²</string>
    <string name="root">²√x</string>
    <string name="division">/</string>
    <string name="seven">7</string>
    <string name="eigh">8</string>
    <string name="nine">9</string>
    <string name="times">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="swish">+/-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
</resources>
